--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,7 @@
   font-family: monospace;
   font-size:25px;
   margin-top:25px;
-  margin-left: 10.1%;
-  
+  margin-left: 10.1%; 
 }
 
 .project-container {
@@ -65,3 +64,9 @@
   font-size:15px;
   margin-bottom: 10px;;
 }
+
+.icon {
+ margin-left: 50px;
+ size: 35px;
+}
+
