--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@
 }
 
 .icon {
- margin-left: 25px;;
+ margin-left: 55px;;
  size: 35px;
 }
 
@@ -84,4 +84,12 @@
 
 .footer {
   margin-bottom: -850px;
+}
+.info {
+  margin-right: 30px;
+  margin-left: -80px;
+}
+
+.biginfo {
+  width: 100%;
 }
